[Parathana]:refactor swagger and routes
